# c2rust

./: .gitignore  .gitmodules  C2Rust.py  README.md  conf.py  gen_parser.sh  index.rst  testing.py
Benchmarks/: testing.py
Benchmarks/Aggregate/: .pyggi.config  aggregate.py  aggregate.xml  aggregate_good.xml  function.xml  readme.md  test_xmlAggregate.py  testing.py  testxml.py  xml2python.py  xmlpython.py
Benchmarks/Aggregate/rust2xml/: .pyggi.config  Cargo.toml  output.xml  testing.sh
Benchmarks/Aggregate/rust2xml/src/: .pyggi.config  Agg_exp.xml  Aggregate_exp.xml  aggregate.rs  json2rust.rs  lib.rs  output.json  output.xml  output_b  output_b.json  output_b.rs  runall.sh  rust2xml.rs  setup.rs  testing.sh  xml2json.rs
Benchmarks/Aggregate/rust2xml/tests/: test_aggregate.rs
Benchmarks/aggregate/: .pyggi.config  aggregate.rs
Benchmarks/avl/: avl.rs
Benchmarks/b_tests/: CMakeLists.txt  b13_calleestructp.rs  b19_bothpointerstruct.rs  b22_callerpointerstructproto.rs  b23_retswitchexplicit.rs  b27_structcastsafe.rs  b30_structprotocastunsafeimplicitretswitch.rs  b9_allsafestructp.rs
b_tests/: Readme.txt  b10_allsafepointerstruct.rs  b11_calleestructnp.rs  b12_callerstructnp.rs  b14_callerstructp.rs  b15_calleepointerstruct.rs  b16_callerpointerstruct.rs  b17_bothstructnp.rs  b18_bothstructp.rs  b1_allsafe.rs  b20_allsafepointerstructproto.rs  b21_calleepointerstructproto.rs  b23_explicitunsafecast.rs  b24_retswitchimplicit.rs  b26_castprotounsafe.rs  b26_castprotounsafeimplicitretswitch.rs  b28_structcastexplicit.rs  b28_structimplicitretcast.rs  b29_structprotocastsafe.rs  b29_structprotocastsafeuseunsafe.rs  b2_calleeunsafe.rs  b30_structprotocastexplicitunsafeuseunsafe.rs  b30_structprotocastunsafeexplicit.rs  b30_structprotoconflict.rs  b30_structprotoconflictbodyconvert.rs  b3_onecallerunsafe.rs  b4_bothunsafe.rs  b5_calleeunsafeproto.rs  b6_callerunsafeproto.rs  b7_allsafeproto.rs  b8_allsafestructnp.rs
b_tests/safecode/: b1_allsafe.rs  b2_calleesafe.rs  b3_onecallersafe.rs  b4_bothsafe.rs  b5_calleesafeproto.rs  b6_callersafeproto.rs
c2safeRust_examples/: aggregate.c  aggregate.rs  bst.c  bst.rs  nfa.rs  output.rs
commons/: utils.py
dump/benchmarks/: AstPrinterTest.py  SimulatorTest.py  TransformerTest.py  TypeCheckerTest.py  avl_main.rs  e2eTest.py  genprog_test.py  match_test.rs  nfa_1.rs  pair.rs  print_test.rs  test1.rs  test4.rs  test6.rs  test7.rs  unwrap_test.rs
repair/: QGeneticProgramming.py  TriangleJMetal.py  ast_sim_output.txt
repair/RustCode/: .lia.cache
repair/framework/: cpatch.py  cproblem.py  cprogram.py  (+5 more)
source/: QGeneticProgramming.py  TriangleJMetal.py  ast_output.txt  ast_sim_output.txt  genprog_output.txt
(+307 files in other folders)
